argocd/nodered/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  namespace: nodered
  labels:
    app: nodered
spec:
  selector:
    matchLabels:
      app: nodered
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
      - image: nodered/node-red:latest
        name: nodered
        resources:
          requests:
            cpu: "20m"
            memory: "200M"
        ports:
        - containerPort: 1880
        volumeMounts:
        - mountPath: /data
          name: nodered-data
      volumes:
        - name: nodered-data
          persistentVolumeClaim:
            claimName: nodered-pvc
      restartPolicy: Always
      imagePullPolicy: IfNotPresent
