argocd/nodered/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: nodered-svc
  namespace: nodered
spec:
  selector:    
    app: nodered
  type: ClusterIP
  ports:  
  - name: http
    port: 1880
    targetPort: 1880
    protocol: TCP
